[package]
authors = ["chevdor <chevdor@gmail.com>", "Wilfried Kopp <wilfried@parity.io"]
description = "A cli utility written in Rust that allows fetching all the labels of a project, save those as a YAML file that you can easily edit or save as backup and apply a saved preset to new repositories."
edition = "2021"
homepage = "https://github.com/chevdor/glabel"
keywords = ["cli", "rust", "github", "label", "chevdor"]
license = "MIT"
name = "glabel"
readme = "README.md"
repository = "https://github.com/chevdor/glabel"
version = "0.0.4"

[dependencies]
assert_cmd = "2.0"
clap = {version = "3.0", features = ["derive", "env", "unicode", "cargo"]}
env_logger = "0.9"
futures = "0.3"
glabellib = {version = "0.0.4", path = "../lib"}
hubcaps = "0.6"
log = "0.4"
serde = "1.0"
serde_yaml = {version = "0.8", optional = false}
termion = "1.5"
tokio = {version = "1.17", features = ["full"]}

[features]
wipe = []
