[package]
authors = ["chevdor <chevdor@gmail.com>", "Wilfried Kopp <wilfried@parity.io"]
description = "A cli utility written in Rust that allows fetching all the labels of a project, save those as a YAML file that you can easily edit or save as backup and apply a saved preset to new repositories."
edition = "2021"
homepage = "https://github.com/chevdor/glabel"
keywords = ["cli", "rust", "github", "label", "chevdor"]
license = "MIT"
name = "glabel"
readme = "README.md"
repository = "https://github.com/chevdor/glabel"
version = "0.0.7"

[dependencies]
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
env_logger = "0.10"
futures = "0.3"
glabellib = { version = "0.0", path = "../lib" }
hubcaps = "0.6"
log = "0.4"
serde = "1.0"
serde_yaml = { version = "0.9", optional = false }
termion = "2"
tokio = { version = "=0.2", features = ["full"] }

[features]
wipe = []
